SUPER ok fix for vertical scrollbar

--- a/client/src/app/shared/carousel/carousel.component.scss
+++ b/client/src/app/shared/carousel/carousel.component.scss
@@ -5,7 +5,7 @@
   background-color: $svg-icon;
   min-height: 9.4em;
   max-height: 34.4em;
-  margin: 0 auto;
+  margin: 0;
   overflow: hidden;
   position: relative;
   width: 100%;
